--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,25 +1,38 @@
 /* styles.css */
 
 nav {
-    background-color: rgb(178, 180, 70);
-    padding: 100px;
-  }
-  nav a {
-    color: white;
-    display: block;
-    padding: 20px;
-  }
-  h1 {
-    color: rgb(118, 70, 180);
-  }
-  img {
-    width: 150px;
-    height: auto;
-    border: 10px solid steelblue;
-    padding: 20px;
-    box-shadow: 0 0 300px gray;
-  } 
-  p {
-    padding: 10px;
-  }
-  
+  background-color: rgb(178, 180, 70);
+  padding: 7;
+}
+nav a {
+  color: rgb(252, 250, 250);
+  display: inline-block;
+  padding: 20px;
+}
+h1 {
+  color: rgb(118, 70, 180);
+}
+img {
+  width: 200px;
+  height: auto;
+  border: 5px solid steelblue;
+  padding: 5px;
+  box-shadow: 0 0 300px gray;
+} 
+p {
+  padding: 10px;
+}
+main {
+  max-width: 840px;
+}
+main img{
+  width: 150px;
+  height: auto;
+}
+p{padding: 0;}
+
+footer {
+  margin-top: 15px;
+  border-top: 1px solid #000;
+  text-align: center;
+}
