--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,38 +1,56 @@
 /* styles.css */
 
 nav {
-  background-color: rgb(178, 180, 70);
-  padding: 7;
-}
-nav a {
-  color: rgb(252, 250, 250);
-  display: inline-block;
-  padding: 20px;
-}
-h1 {
-  color: rgb(118, 70, 180);
-}
-img {
-  width: 200px;
-  height: auto;
-  border: 5px solid steelblue;
-  padding: 5px;
-  box-shadow: 0 0 300px gray;
-} 
-p {
-  padding: 10px;
-}
-main {
-  max-width: 840px;
-}
-main img{
-  width: 150px;
-  height: auto;
-}
-p{padding: 0;}
-
-footer {
-  margin-top: 15px;
-  border-top: 1px solid #000;
-  text-align: center;
-}
+    background-color: rgb(178, 180, 70);
+    padding: 7;
+  }
+  nav a {
+    color: rgb(252, 250, 250);
+    display: inline-block;
+    padding: 20px;
+  }
+  h1 {
+    color: rgb(118, 70, 180);
+  }
+  img {
+    width: 20px;
+    height: auto;
+    border: 5px solid steelblue;
+    padding: 5px;
+    box-shadow: 0 0 1000px gray;
+  } 
+  p {
+    padding: 0px;
+  }
+  main {
+    max-width: 840px;
+  }
+  aside {
+    width: 1 rem;
+    margin: 1 rem; 
+    border: 1 px solid rgba(0, 0, 0, 0.2);
+    padding: 1 rem; 
+    background-color: rgb(219, 219, 180);
+    color: black;
+    text-align: center;
+  }
+  aside img{
+    width: 200px;
+    height: auto;
+  }
+ main img{
+    width: 200px;
+    height: auto;
+    border: 5px solid steelblue;
+    padding: 5px;
+    margin-top: 15px;
+    box-shadow: 0 0 1000px grey;
+  }
+  p{padding: 0;}
+  
+  footer {
+    margin-top: 15px;
+    border-top: 1px solid #000;
+    text-align: center;
+  }
+  
