--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,41 +1,41 @@
 /* styles.css */
 
-nav {
-
-  * {
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-  }
+}
 
-    background-color: rgb(178, 180, 70);
+nav {
+
+    background-color: rgb(225, 226, 165);
     padding: 0;
   }
   nav a{
     color: rgb(252, 250, 250);
     display: inline-block;
-    padding: 20px;
+    padding: 0.5rem;
   }
   h1 {
     color: rgb(118, 70, 180);
   }
   img {
-    width: 20px;
+    width: 150px;
     height: auto;
-    border: 5px solid steelblue;
-    padding: 5px;
-    box-shadow: 0 0 1000px gray;
+    border: 1px solid steelblue;
+    padding: 2px;
+    box-shadow: 0 0 25px gray;
   } 
   p {
-    padding: 0px;
+    padding: 10px;
   }
   main {
     max-width: 840px;
   }
 
   aside {
-    aside:class ="box";
-    width: 400px;
+  
+    width: 20rem;
     border: 10px solid rgba(0, 0, 0, 0.2);
     text-align: center;
   }
@@ -56,10 +56,10 @@ nav {
    /* Class Selectors */
   
    .box {
-    margin: 2rem;
+    margin: 1rem;
     border: 4px solid rgba(252, 11, 11, 0.1);
     padding: 1rem;
-    background-color: #5a864e;
+    background-color: #b2f348;
     color: #f0c60e;
   }
   
