--- a/styles/styles.css
+++ b/styles/styles.css
@@ -41,16 +41,16 @@ nav {
   }
 
   aside h2 {
-    width: 100%;
+    width: 200;
     height: auto;
-    position: absolute;
+    position: center;
  }
   aside img{
-    width: 200px;
+    width: 250px;
     height: auto;
   }
  main img{
-    width: 150px;
+    width: 200px;
     height: auto;
     border: 5px solid steelblue;
     padding: 5px;
