--- a/styles/styles.css
+++ b/styles/styles.css
@@ -43,7 +43,7 @@ nav {
   aside h2 {
     width: 200;
     height: auto;
-    position: relative;
+   
  }
   aside img{
     width: 250px;
@@ -67,7 +67,7 @@ nav {
     border: 4px solid rgba(252, 11, 11, 0.1);
     padding: 1rem;
     background-color: #b2f348;
-    color: #f0c60e;
+    color: #fa0c0c;
   }
   
   footer {
