--- a/styles/styles.css
+++ b/styles/styles.css
@@ -41,10 +41,9 @@ nav {
   }
 
   aside h2 {
-    position: absolute;
-    top: 47px;
-    left: 150px;
-  }
+    height : auto;
+    position : relative;
+    }
   
   aside img{
     width: 250px;
