--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,15 +1,15 @@
 /* styles.css */
 
 * {
-    margin: 0;
-    padding: 0;
+    margin: 100;
+    padding: 100;
     box-sizing: border-box;
 }
 
 nav {
 
-    background-color: rgb(225, 226, 165);
-    padding: 0;
+    background-color: rgb(202, 122, 16);
+    padding: 10;
   }
   nav a{
     color: rgb(252, 250, 250);
@@ -22,12 +22,12 @@ nav {
   img {
     width: 150px;
     height: auto;
-    border: 1px solid steelblue;
+    border: 1px solid rgb(252, 115, 4);
     padding: 2px;
     box-shadow: 0 0 25px gray;
   } 
   p {
-    padding: 10px;
+    padding: 100px;
   }
   main {
     max-width: 840px;
@@ -52,10 +52,10 @@ nav {
  main img{
     width: 200px;
     height: auto;
-    border: 5px solid steelblue;
-    padding: 5px;
+    border: 5px solid rgb(252, 115, 4);
+    padding: 1px;
     margin-top: 15px;
-    box-shadow: 0 0 1000px grey;
+    box-shadow: 10 20 10000px solid rgb(252, 115, 4);
     float: right;
   }
   p{padding: 0;}
