--- a/styles/styles.css
+++ b/styles/styles.css
@@ -66,15 +66,13 @@ nav {
     margin: 1rem;
     border: 4px solid rgba(252, 11, 11, 0.1);
     padding: 1rem;
-    background-color: #b2f348;
-    color: #fa0c0c;
+    background-color: #f3a948;
+    color: #6808d4;
   }
   
   footer {
     margin-top: 15px;
     border-top: 1px solid #000;
     text-align: center;
-  
-   
   }
   
