--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,6 +6,16 @@
     box-sizing: border-box;
 }
 
+header, footer, .grid {
+  margin: 0 auto;
+  max-width: 840px;
+}
+
+.grid {
+  display: grid;
+  align-items: center;
+}
+
 nav {
 
     background-color: rgb(202, 122, 16);
