--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -305,3 +305,17 @@ button {
   padding: 10px 10px;   
   float: right;
 }
+header, footer, .grid {
+    margin: 0 auto;
+    max-width: 840px;
+}
+.grid {
+    display: grid;
+    align-items: center;
+}
+aside {
+    width: 30rem;
+    border: 10px solid rgba(0, 0, 0, 0.2);
+    text-align: center;
+    position: relative;
+}
