--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=SourceSerif4&family=Dosis&display=swap');
+/* styles/rafting.css */
 
 :root {
     --primary-color: #8B008B;
