--- a/styles/quiz.css
+++ b/styles/quiz.css
@@ -4,6 +4,76 @@
     padding: 100;
     box-sizing: border-box;
 }
+.grid_header{
+    display: grid;
+    grid-template-columns: 1fr 5fr;
+    justify-content: space-between;
+    border-bottom: 1.5px solid #000; 
+    background-color: var(--theme-color);
+}
+.box_nav {
+    display: flex;
+    justify-content: center; /*Centers the button*/
+    align-items: center;
+    flex-direction: row;
+    color: #333;
+}
+
+.box_button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1.5px solid rgb(0, 0, 0, 0.2);
+    background-color: #eee;
+    padding: 15px;
+}
+
+nav {
+	text-align: center;
+}
+
+.navigation {
+	display: flex;
+	list-style: none;
+}
+
+.navigation li {
+	flex: 1 1 100%;
+}
+
+.navigation a {
+	display: block;
+	color: navy;
+	padding: 20px;
+	text-decoration: none;
+}
+
+.navigation a:hover {
+	color: tomato;
+	font-weight: 700;
+	text-decoration: underline;
+}
+
+figure {
+    border: thin #c0c0c0 solid;
+    display: flex;
+    flex-flow: column;
+    padding: 5px;
+    max-width: 220px;
+    margin: auto;
+}
+
+nav {
+
+    background-color: rgb(202, 122, 16);
+    padding: 10;
+}
+
+nav a{
+  color: rgb(252, 250, 250);
+  display: inline-block;
+  padding: 0.5rem;
+}
 
 /* Body styles */
 body {
